2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-nsim.exp: Correct code accidentally
	introduced.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Configure to run with
	gdbserver target if GDB is the tool.
	* dejagnu/baseboards/arc-linux-nsim.exp: Likewise.
	* dejagnu/baseboards/arc-linux-generic.exp: Decide base
	configuration to load based on tool.
	* dejagnu/ftp-extra.exp (ftp_download): Add code to set executable
	bits of transferred file if necessary.
	* dejagnu/telnet-extra.exp (telnet_spawn): New proc.

2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check, save_res): Remove use of bash "function"
	keywords.
	* build-all.sh: Correct comment typo.

2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Use "=" not "==" in [] comparisons.

2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh, run-tests.sh: Correct handling of --jobs, --load
	and --single-thread.
	* build-uclibc.sh: Correct typo in gdbserver config.

2013-02-05  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Correct layout
	* dejagnu/baseboards/arc-linux-nsim.exp: Correct assignment of
	hostname.

2013-02-04  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Specify hostname.
	* dejagnu/baseboards/arc-linux-generic.exp: Don't specify hostname
	* dejagnu/baseboards/arc-linux-nsim.exp: Set hostname using
	get-ip.sh script.
	* get-ip.sh, ip-avail.txt: Created.

2013-02-04  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check): Use '=' when specifying board
	(save_res): Correct tests.

2013-02-04  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check): Add board as fourth argument.
	(save_res): Only run if there is a result file, and put all
	results to log.
	* dejagnu/baseboards/arc-linux-generic.exp: Take the